<resources>
    <string name="app_name">Hillforts</string>
    <string name="archaeological_fieldwork">Archaeological Fieldwork</string>
    <string name="hint_hillfortName">Hillfort Name</string>
    <string name="hint_hillfortDescription">Hillfort Description</string>
    <string name="menu_addHillfort">Add Hillfort</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="enter_hillfort_name"> Please enter a Hillfort name </string>
    <string name="save_hillfort"> Save Hillfort</string>
    <string name="button_addImage"> Upload Image </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Change Hillfort Image</string>
    <string name="add_four_hillfort_image">Add Another Image</string>
    <string name="max_hillfort_images">Maximum Images Added</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="hillfort_name">Hillfort Name</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="visited_checkbox">Visted Hillfort</string>
    <string name="button_delete_image">Delete Image</string>
    <string name="heading_hillfort_name">New Hillfort</string>
    <string name="menu_hillfort_image">Hillfort Image</string>
    <string name="title_activity_login">AuthenticationActivity</string>
    <string name="notes_input">Hillfort Notes</string>
    <string name="date_visited">Date Visited</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_heading">User Settings</string>
    <string name="button_save_user_settings">Save User Settings</string>
    <string name="menu_updateSettings">Update</string>
    <string name="menu_cancelSettings">Cancel</string>
    <string name="menu_deleteUser">Delete Account</string>
    <string name="button_delete_user">Delete User</string>
    <string name="item_delete_all_hillforts">Delete All</string>
    <string name="statistics_heading">Statistics</string>
    <string name="statistics_user_heading">Your Hillfort Statistics</string>
    <string name="statistics_hillforts_total">Total: </string>
    <string name="statistics_hillforts_viewed">Total Viewed: </string>
    <string name="statistics_hillforts_unseen">Total Unseen: </string>
    <string name="statistics_class_avg_heading">Your Class Average Statistics</string>
    <string name="statistics_class_avg_total_hillforts">Average Hillforts Total: </string>
    <string name="statistics_class_viewed">Average Hillforts Viewed: </string>
    <string name="statistics_class_unseen">Average Hillforts Unseen: </string>
    <string name="statistics_position">You are above/below average</string>
    <string name="hillfort_lat">Location Lat</string>
    <string name="hillfort_lng">Location Lng</string>
    <string name="image_message"></string>
    <string name="title_activity_hillfort_maps">Map</string>
    <string name="menu_mapHillforts">All Hillforts Map</string>
    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="button_delete_hillfort">Delete Hillfort</string>
    <string name="menu_saveHillfort">Save</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Create Account</string>
    <string name="hint_userName">Username</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="hint_update_password">********</string>
    <string name="title_activity_hillforts_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_location">Hillfort</string>
    <string name="map_current_visited">"Date Visited:"</string>
    <string name="button_map_edit_current_hillfort">Edit Hillfort</string>
    <string name="bottom_menu_favourites">Favourites</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_map">Map</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="fav_checkbox">Favourite</string>
    <string name="search_hint">Search Hillforts</string>
    <string name="btn_share">Share</string>
    <string name="btn_send">Send</string>
    <string name="hint_input_email_address">Enter Email Address</string>
    <string name="btn_camera">Camera</string>
</resources>