<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/item_delete"
            android:icon="@drawable/delete"
            android:title="@string/menu_deleteHillfort" />

        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings"
            />
         <item
            android:id="@+id/item_cancel"
            android:icon="@drawable/cancel"
            android:title="@string/menu_cancelHillfort"
        />
        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout"
        />
</menu>