<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/item_add"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_addHillfort"
             />
        <item
            android:id="@+id/item_deleteAllHillforts"
            android:icon="@drawable/delete"
            android:title="@string/item_delete_all_hillforts"
            />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings"
            />
        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout"
            />
</menu>