<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hillfort.activities.HillfortActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:layout_marginTop="10dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settings_heading"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/settings_heading"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    android:padding="5px"
                    android:textAlignment="center"
                    />

                <EditText
                    android:id="@+id/settingsUsername"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_userName"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/settingsPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_password"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
                <Button
                    android:id="@+id/btnUpdateSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_save_user_settings"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/btnDeleteUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorRed"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_delete_user"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/settings_statisticsHeading"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/statistics_heading"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    android:padding="5px"
                    android:layout_marginTop="30px"
                    android:textAlignment="center"
                    />
                <TextView
                    android:id="@+id/settings_statisticsHillfortHeading"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/statistics_user_heading"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp"
                    android:padding="30px"
                    android:layout_marginTop="30px"
                    android:textAlignment="center"
                    />
                <TextView
                    android:id="@+id/statisticsHillfortsTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/statistics_hillforts_total"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/statisticsHillfortsViewed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/statistics_hillforts_viewed"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/statisticsHillfortsUnseen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/statistics_hillforts_unseen"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/settings_statisticsClassHeading"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/statistics_class_avg_heading"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp"
                    android:padding="30px"
                    android:layout_marginTop="30px"
                    android:textAlignment="center"
                    />
                <TextView
                    android:id="@+id/statisticsClassTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/statistics_class_avg_total_hillforts"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/statisticsClassViewed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/statistics_class_viewed"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/statisticsClassUnseen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/statistics_class_unseen"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/statisticsUserPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/statistics_position"
                    android:padding="8dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>