<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hillfort.activities.HillfortActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary"
                />
        </com.google.android.material.appbar.AppBarLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:layout_marginTop="10dp"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true">


            <TextView
                android:id="@+id/headingHillfortName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorAccent"
                android:padding="5px"
                android:text="@string/heading_hillfort_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"
                app:layout_constraintBottom_toTopOf="@+id/hillfortName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/hillfortName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginTop="48dp"
                android:autofillHints=""
                android:hint="@string/hint_hillfortName"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headingHillfortName"></EditText>

            <EditText
                android:id="@+id/hillfortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/hint_hillfortDescription"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortName"
                ></EditText>

            <EditText
                android:id="@+id/hillfortNotes"
                android:hint="@string/notes_input"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:textSize="20sp"
                android:inputType="text|textMultiLine"
                android:gravity="top"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortDescription"
                ></EditText>

            <TextView
                android:id="@+id/hillfortLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/hillfort_lat"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortNotes">
            </TextView>
            <TextView
                android:id="@+id/hillfortLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/hillfort_lng"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortLat"
                ></TextView>

            <Button
                android:id="@+id/hillfortLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortLng"/>

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortLocation"/>

            <TextView
                android:id="@+id/imageMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/image_message"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageMessage" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addHillfort"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewImages"/>

            <CheckBox
                android:id="@+id/visitedHillfort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:padding="20dp"
                android:layout_margin="20dp"
                android:text="@string/visited_checkbox"
                android:textSize="25sp"
                android:textColor="@color/colorAccent"
                android:onClick="onCheckboxClicked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAdd"/>

            <TextView
                android:id="@+id/dateVisited"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:text="@string/date_visited"
                android:textSelectHandleLeft="@string/date_visited"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/visitedHillfort" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>